k8s/cached/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trifid-cached
spec:
  template:
    spec:
      securityContext:
        runAsUser: 65534
        runAsGroup: 65534
      containers:
        - name: trifid-cached
          image: ghcr.io/zazuko/ld-zazuko-com
          imagePullPolicy: Always

          ports:
            - name: http
              containerPort: 8080
              protocol: TCP

          livenessProbe:
            httpGet:
              path: /health
              port: http
          readinessProbe:
            httpGet:
              path: /health
              port: http
