k8s/cached/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trifid-cached
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
